syntax = "proto3";

option csharp_namespace = "Microservices.Shared.Protos";

package product;

service Product {
  rpc GetProductsByCategoryId (GetProductsByCategoryIdRequest) returns (GetProductsByCategoryIdResponse);
  rpc DeleteProduct (ProductRequest) returns (DeleteProductResponse);
  rpc GetProductById (ProductRequest) returns (GetProductResponse);
  rpc UpdateRatingInfo(UpdateProductRatingsRequest) returns (UpdateProductRatingsResponse);
}

message GetProductsByCategoryIdRequest {
  int32 categoryId = 1;
}

message ProductItem {
  int32 productId = 1;
  string name = 2;
  string image = 3;
  bool isFound = 4; 
}

message GetProductsByCategoryIdResponse {
  repeated ProductItem products = 1;
}

message GetProductResponse {
  ProductItem product = 1;
}

message ProductRequest {
  int32 productId = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message UpdateProductRatingsRequest {
  int32 productId = 1;
  double avgRating = 2;
  int32 totalRatings = 3;
}

message UpdateProductRatingsResponse {
  bool success = 1;
}